UPDATES: Added pixelated logo and fixed font legibility on chrome; will work on star animation and mobile design tomorrow

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -3,7 +3,8 @@ $largeFont: 8em;
 
 @font-face {
   font-family: "Pixelated Times New Roman";
-  src: url("../../../public/fonts/pixelated-times-new-roman.otf.woff2") format(woff2);
+  src: url("../../../public/fonts/pixelated-times-new-roman.otf.woff2")
+    format(woff2);
 }
 
 @function renderStars($amount, $color) {
@@ -20,22 +21,31 @@ $shadows-small: renderStars(700, "#FF4DFF");
 $shadows-medium: renderStars(400, "#A64DFF");
 $shadows-big: renderStars(200, "#3A68E8");
 
-p{
+p {
   font-size: 22px;
 }
 
-h1, .app__main-text{
-  background-image: linear-gradient(0deg,rgba(195, 141, 34, 1) 0%, rgba(170, 45, 253, 1) 100%);
+h1,
+.app__main-text {
+  background-image: linear-gradient(
+    0deg,
+    rgb(34, 163, 195) 0%,
+    rgba(170, 45, 253, 1) 100%
+  );
   background-clip: text;
   color: transparent;
 }
 
-p, h1, div, h2{
+p,
+h1,
+div,
+h2 {
   text-align: center;
   text-rendering: optimizeLegibility;
+  font-weight: lighter;
 }
 
-*{
+* {
   padding: 0px;
   margin: 0px;
 }
@@ -170,11 +180,11 @@ body {
   }
 }
 
-.app__github-asteroid{
-  background: transparent url('../../vendor/icons/github-brands-solid.svg') center no-repeat;
-  background-color: #6e5494;
-  width: 80px;
-  height: 80px;
+.app__github-asteroid {
+  background: transparent url("../../vendor/icons/pixelated_github_cat.svg")
+    center no-repeat;
+  width: 200px;
+  height: 200px;
   position: absolute;
   left: 200px;
   top: 40px;
@@ -203,11 +213,15 @@ body {
   visibility: visible;
 }
 
-.app__medium-text{
+.app__medium-text {
   font-size: $largeFont / 3;
   -webkit-animation: floatAround linear infinite 15s,
-  1s ease 6s normal forwards 1 fade;
-animation: floatAround linear infinite 15s, 1s ease 6s normal forwards 1 fade;
+    1s ease 6s normal forwards 1 fade;
+  animation: floatAround linear infinite 15s, 1s ease 6s normal forwards 1 fade;
+}
+
+.title{
+  margin-bottom: 0px;
 }
 
 .top {
@@ -234,28 +248,27 @@ animation: floatAround linear infinite 15s, 1s ease 6s normal forwards 1 fade;
   animation: floatAround linear infinite 25s, 1s ease 6s normal forwards 1 fade;
 }
 
-.app_about-me-container{
+.app_about-me-container {
   display: flex;
   justify-content: center;
   gap: 40px;
   margin-top: 50px;
 }
 
-.app__about-me-text{
+.app__about-me-text {
   max-width: 50%;
   text-align: center;
   -webkit-animation: floatAround linear infinite 20s,
-  1s ease 6s normal forwards 1 fade;
-animation: floatAround linear infinite 20s, 1s ease 6s normal forwards 1 fade;
+    1s ease 6s normal forwards 1 fade;
+  animation: floatAround linear infinite 20s, 1s ease 6s normal forwards 1 fade;
 }
 
-.app__widgetsContainer{
+.app__widgetsContainer {
   display: grid;
   grid-template-columns: repeat(auto-fit, 280px);
   max-width: 968px;
   gap: 15px;
   margin: auto;
-  //overflow-y: scroll;
 }
 
 @-webkit-keyframes starMove {
